test jeff commit

--- a/reaction_time.html
+++ b/reaction_time.html
@@ -6,7 +6,7 @@
 <div id="try_again" class="beginRoundHide" style="display:none;">Try that again.</div>
 
 <div id="instructions" class="lottaText">
-  <p>Welcome! For this activity, you will be shown a series of 5 letters.  
+  <p>Welcome!! For this activity, you will be shown a series of 5 letters.  
   Your job is to type in the third letter - the one in the middle - as quickly as possible.  
   Your answer is recorded automatically.</p>
   
